--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,10 @@ book:
     - part: "Control Flow"
       chapters:
       - basic/cond.qmd
+      - basic/loop.qmd
+    - part: "Functions"
+      chapters:
+      - basic/function.qmd
     - references.qmd
 
 bibliography: references.bib
