change name to python notes

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: book
 
 book:
-  title: "Python Cheat Sheet"
+  title: "Python Notes"
   author: "Kittipos Sirivongrungson"
   date: "3/29/2022"
   chapters:
