--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,7 +31,9 @@ bibliography: references.bib
 
 format:
   html:
-    theme: cosmo
+    theme:
+      light: zephyr
+      dark: solar
   #pdf:
     #documentclass: scrreprt
 
