--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,7 @@ book:
     - part: "Functions"
       chapters:
       - basic/function.qmd
+      - basic/function-02.qmd
     - part: "Error & Exception"
       chapters:
       - basic/exception.qmd
