--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,7 @@ book:
       chapters:
       - basic/function.qmd
       - basic/function-02.qmd
+      - basic/function-dec.qmd
     - part: "Error & Exception"
       chapters:
       - basic/exception.qmd
