--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,7 @@ book:
       chapters:
       - basic/cond.qmd
       - basic/loop.qmd
+      - basic/loop-alt.qmd
     - part: "Functions"
       chapters:
       - basic/function.qmd
