--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,6 +32,7 @@ book:
     - part: "OOP"
       chapters:
       - basic/oop.qmd
+      - basic/dataclass.qmd
     - part: "File system"
       chapters: 
       - basic/os/os.qmd
