--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,7 @@ book:
       chapters:
       - basic/cond.qmd
       - basic/loop.qmd
-      - basic/loop-alt.qmd
+      - "basic/comprehen.qmd"
       - basic/fun-prog.qmd
     - part: "Functions"
       chapters:
