--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,6 +33,9 @@ book:
     - part: "Error & Exception"
       chapters:
       - basic/exception.qmd
+    - part: "Regex"
+      chapters: 
+      - "basic/regex.qmd"
     - part: "Iterate"
       chapters:
       - "concept/iterable-iterator-generator.qmd"
