--- a/_quarto.yml
+++ b/_quarto.yml
@@ -56,6 +56,9 @@ book:
       - basic/os/os.qmd
       - basic/path.qmd
       - basic/json.qmd
+    - part: "FS"
+      chapters: 
+      - "fs/fs.ipynb"
     - part: "Web"
       chapters: 
       - "basic/request.qmd"
