--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,6 +34,9 @@ book:
       chapters:
       - basic/exception.qmd
       - "try/try-else-na.qmd"
+    - part: "Logging"
+      chapters: 
+      - "logging/logging-basic.qmd"
     - part: "Regex"
       chapters: 
       - "basic/regex.qmd"
