add book catalog notebook and update table of contents

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -52,6 +52,7 @@ book:
       - "oop/oop-class-instance-method.ipynb"
       - "basic/dataclass.qmd"
       - "playground/shape.ipynb"
+      - "playground/book-catalog.ipynb"
     - part: "Data Validation"
       chapters: 
       - "howto/typecheck.ipynb"
