--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,9 @@ book:
   site-url: https://py-notes-lightbridge.netlify.app
   chapters:
     - index.qmd
+    - part: "LLM Prompt"
+      chapters: 
+      - "pref/py-pref.qmd"
     - part: "Primitive"
       chapters:
       - basic/primitive.qmd
