--- a/_quarto.yml
+++ b/_quarto.yml
@@ -40,6 +40,7 @@ book:
     - part: "Logging"
       chapters: 
       - "logging/logging-basic.qmd"
+      - "logging/logging-file.qmd"
     - part: "Regex"
       chapters: 
       - "basic/regex.qmd"
