--- a/_quarto.yml
+++ b/_quarto.yml
@@ -41,6 +41,7 @@ book:
       chapters: 
       - "logging/logging-basic.qmd"
       - "logging/logging-file.qmd"
+      - "logging/logging-advanced.qmd"
     - part: "Regex"
       chapters: 
       - "basic/regex.qmd"
