add function validation

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,7 @@ book:
       - basic/function.qmd
       - basic/function-02.qmd
       - basic/function-dec.qmd
+      - "basic/function-validate.qmd"
     - part: "Func Prog"
       chapters: 
       - "concept/map-reduce.qmd"
