add web scraping notebooks for Beautiful Soup examples

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -83,6 +83,8 @@ book:
     - part: "Web"
       chapters: 
       - "contents/basic/request.qmd"
+      - "contents/webscrape/bs4soup-basic.ipynb"
+      - "contents/webscrape/bs4soup-fetch.ipynb"
     - part: "Context"
       chapters: 
       - "contents/basic/context/context.qmd"
