Add new notebook for extracting tables using Beautiful Soup and update fetch notebook execution count

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -85,6 +85,7 @@ book:
       - "contents/basic/request.qmd"
       - "contents/webscrape/bs4soup-basic.ipynb"
       - "contents/webscrape/bs4soup-fetch.ipynb"
+      - "contents/webscrape/bs4soup-extract-table.ipynb"
     - part: "Context"
       chapters: 
       - "contents/basic/context/context.qmd"
