Add typing section with basic type hints and cheatsheet
- Introduced a new part "Typing" in the book structure with two chapters:
  - typehint-basic.ipynb: Covers basic type hints including simple, generic, and union types, as well as classes and Pydantic models.
  - typehint-cheatsheet.ipynb: A comprehensive cheat sheet summarizing type hints across different Python versions.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,10 @@ book:
       - contents/basic/number.qmd
       - contents/basic/string.qmd
       - contents/basic/data-str.qmd
+    - part: "Typing"
+      chapters: 
+      - "contents/types/typehint-basic.ipynb"
+      - "contents/types/typehint-cheatsheet.ipynb"
     - part: "Control Flow"
       chapters:
       - "contents/basic/cond.qmd"
